--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -6,7 +6,7 @@
     <a href="/register/" class="float-right btn btn-outline-primary">Sign up</a>
     <h4 class="card-title mb-4 mt-1">Sign in</h4>
     <p>
-      <a href="" class="btn btn-dark"> <i class="fab fa-github-f"></i>Login via github</a>
+      <a href="{% url 'social:begin' 'github' %}" class="btn btn-dark"> <i class="fab fa-github-f"></i>Login via github</a>
     </p>
     <hr>
     <form method="post">
