--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'create-ticket' %}"> Create test<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'create-ticket' %}"> Create test<span
+                        class="sr-only">(current)</span></a>
             </li>
         </ul>
         <ul class="navbar-nav">
@@ -19,8 +20,13 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     {{ user }}
+                    {% if user.avatar %}
+                    <img src="{{ user.avatar.url }}"
+                        class="rounded-circle" alt="Avatar" height="27" width="27">
+                    {% else %}
                     <img src="https://www.kindpng.com/picc/m/78-785827_user-profile-avatar-login-account-male-user-icon.png"
                         class="rounded-circle" alt="Avatar" height="27" width="27">
+                    {% endif %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
